Budgeting partial changes

--- a/deployment/templates/deployment/request_dog_list.html
+++ b/deployment/templates/deployment/request_dog_list.html
@@ -48,6 +48,7 @@
                 {% elif Data.status == "Denied" %}
                     <tr class = "error">
                         <td>{{Data.start_date}}</td>
+                        <td>{{Data.end_date}}</td>
                         <td>{{Data.requester}}</td>
                         <td>{{Data.location}}</td>
                         <td>{{Data.total_dogs_demand}}</td>
