--- a/planningandacquiring/templates/planningandacquiring/K9_list.html
+++ b/planningandacquiring/templates/planningandacquiring/K9_list.html
@@ -22,7 +22,7 @@
               <th>Age</th>
               <th>Skill</th>
               <th>Assignment</th>
-			  <th>Microchip</th>
+			  <th>Status</th>
           	</tr>
     		</thead>
     		<tbody>
@@ -37,7 +37,7 @@
                         <td>{{ K9.age}}</td>
                         <td>{{ K9.capability}}</td>
                         <td>{{ K9.assignment}}</td>
-						<td>{{ K9.microchip}}</td>
+						<td>{{ K9.training_status}}</td>
     				</tr>
 				{% endfor %}
         </tbody>
