--- a/training/templates/training/classify_k9_list.html
+++ b/training/templates/training/classify_k9_list.html
@@ -18,7 +18,7 @@
       {{NDD_count}} / {{NDD_demand}}
     </div>
     <div class="label">
-      NDD
+      NDD Count / NDD Required
     </div>
   </div>
   <div class="statistic">
@@ -26,7 +26,7 @@
       {{EDD_count}} / {{EDD_demand}}
     </div>
     <div class="label">
-      EDD
+      EDD Count / EDD Required
     </div>
   </div>
   <div class="statistic">
@@ -34,7 +34,7 @@
       {{SAR_count}} / {{SAR_demand}}
     </div>
     <div class="label">
-      SAR
+      SAR Count / SAR Required
     </div>
   </div>
 </div>
