--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -34,7 +34,7 @@
                                         <i class="list alternate icon"></i>
                                 </a>
 
-                                 <a href="{% url 'planningandacquiring:budgeting'%}" class="item">Budgeting
+                                 <a href="{% url 'planningandacquiring:budget_list'%}" class="item">Budgeting
                                         <i class="money bill alternate outline icon"></i>
                                 </a>
 
