--- a/profiles/templates/profiles/global-base-ui/global_base_ui.html
+++ b/profiles/templates/profiles/global-base-ui/global_base_ui.html
@@ -7,18 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>K9 Coast Guard</title>
     <link rel="icon" href="{% static 'images/k9_logo.png' %}">
-   
+    
+    <!--CDN--->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.7/angular.min.js"></script>
+
     <!-- <script src="{% static 'custome/custom_jquery.js' %}"></script> -->
+    <!-- <script src="{% static 'js/angular.js' %}"></script> -->
     <script src="{% static 'DataTables/jquery-1.12.4.min.js' %}"></script>
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'DataTables/datatables.min.js' %}"></script>
     <script src="{% static 'js/jquery.formset.js' %}"></script>
     <script src="{% static 'semantic/semantic.min.js' %}"></script>
-
+    <script src="{% static 'js/notification.js' %}"></script>
     <!-- <link rel="stylesheet" href="{% static 'custom/custom_style.css' %}"> -->
     <link rel="stylesheet" href="{% static 'semantic/semantic.min.css' %}">
     <link rel="stylesheet" href="{% static 'DataTables/datatables.min.css' %}">
 
+    
 </head>
 <body>
     <!--START OF TOP MENU-->
