--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -19,7 +19,7 @@
                                     <a href="{% url 'unitmanagement:request_list'%}" class="item">Damaged Equipment List
                                         <i class="clipboard list icon"></i>
                                     </a>
-                                    <a href="{% url 'unitmanagement:k9_unpartnered_list'%}" class="item">Reassign Assets
+                                    <a href="{% url 'unitmanagement:k9_unpartnered_list'%}" class="item">Reallocate Assets
                                         <i class="retweet icon"></i>
                                     </a>
                                     <a href="{% url 'unitmanagement:k9_incident'%}" class="item">K9-Incident Form
