--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -45,6 +45,9 @@
                                     <a href="{% url 'unitmanagement:physical_exam_form'%}" class="item">Physical Exam Form
                                         <i class="heartbeat icon"></i>
                                     </a>
+                                    <a href="{% url 'unitmanagement:k9_sick_list'%}" class="item">Sick K9's List
+                                        <i class="ambulance icon"></i>
+                                    </a>
                                     <a href="{% url 'unitmanagement:health_record'%}" class="item">Health Records
                                         <i class="h square icon"></i>
                                     </a>
