--- a/unitmanagement/templates/unitmanagement/health_details.html
+++ b/unitmanagement/templates/unitmanagement/health_details.html
@@ -2,65 +2,54 @@
 
 {% block content %}
 <div class="ui inverted segment" style="padding:20px;">
-    <h3 class="ui header">{{ title }}{{ name }}</h3>
+    <h3 class="ui header">{{ title }}{{ name }} as of {{date}}</h3>
     {% if messages %}
         {% for message in messages %}
             <div class="{{style}}" > {{ message }}</div>
         {% endfor %}
     {% endif %}
 </div>
-<div class = "ui segment">
-    <table class="ui two column celled table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <td>{{data.date}}</td>
-            </tr>
-            <tr>
-                <th>Problem</th>
-                <td>{{data.problem}}</td>
-            </tr>
-            <tr>
-                <th>Treatment</th>
-                <td>{{data.treatment}}</td>
-            </tr>
+<div class="ui segment">
+    <div class="ui raised segment">
+        <table class="ui collapse celled table">
+            <thead>
+                <tr>
+                    <th>K9</th>
+                    <td>{{data.dog}}</td>
+                    <th>Reported by:</th>
+                    <td>{{data.incident_id.reported_by}}</td>
+                    <th>Reported on:</th>
+                    <td>{{data.incident_id.date}}</td>
+                </tr>
+                <tr>
+                    <th>Veterinarian:</th>
+                    <td>{{data.veterinary}}</td>
+                    <th>Prescribed on:</th>
+                    <td>{{data.date}}</td>
+                </tr>
+            </thead>
+        </table>
+    </div>
 
-            <tr>
-                <th>Status</th>
-                <td id = "status">{{data.status}}</td>
-            </tr>
-        </thead>
-    </table>
-</div>
-<div class = "ui segment">
-    <table class="ui three column celled table">
+    <table class="ui celled table" id = 'tabledata'>
         <thead>
-            <tr>
-                <th>Medicine</th>
-                <th>Quantity</th>
-                <th>Dosage</th>
-            </tr>
+          <th>Medicine</th>
+          <th>Quantity</th>
+          <th>Time of Day</th>
+          <th>Duration (Days)</th>  
         </thead>
         <tbody>
-            {% for medicine in medicine %}
+            {% for data in medicine%}
             <tr>
-                <td>{{medicine.medicine}}</td>
-                <td>{{medicine.quantity}}</td>
-                <td>{{medicine.dosage}}</td>
+                <td>{{data.medicine}}</td>
+                <td>{{data.quantity}}</td>
+                <td>{{data.time_of_day}}</td>
+                <td>{{data.duration}}</td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
 </div>
-<form method="POST" action = "{% url 'unitmanagement:medicine_approve' data.id%}">{% csrf_token %}
-    <div class="ui center aligned basic segment">
-        <div class="ui buttons">
-            <a href="{% url 'unitmanagement:health_history' dog.id %}" class="ui blue button">Back</a>
-            <div class="or"></div>
-            <button type = "submit" id = "approve_btn" class="ui green button">Approve</button>
-        </div>
-    </div>
-</form>
 <script type="text/javascript">
 
     $(document).ready(function() {
